hardcode depth of boxes on results page to avoid problem with public collection result spacing
git-svn-id: http://svn.resourcespace.org/svn/resourcespace@3191 c08608d7-6e46-0410-86ca-f2a6f1370df5

--- a/css/global.css
+++ b/css/global.css
@@ -113,7 +113,7 @@ option {font-size:11px;}
 
 /*Resource Panel layout*/
 .ResourcePanelShell {padding:0;float: left;margin: 0px 15px 10px 0px;width: 164px;}
-.ResourcePanel {padding:0;margin:0;width: 162px;padding-bottom:5px;}
+.ResourcePanel {padding:0;margin:0;width: 162px;padding-bottom:5px; height:205px;}
 .ResourcePanelPreview {height: 156px;width: 156px;margin: 3px;}
 .ResourcePanelInfo {margin-right: 5px;margin-left: 5px;margin-bottom: 8px;overflow:hidden;white-space:nowrap;}	
 .ResourcePanelCountry {margin-right: 5px;margin-left: 5px;margin-bottom: 5px;float: left;clear: left;display:inline;}	
